fix text not aligned to center

--- a/src/components/Todos/components/TodoItem/TodoItem.css
+++ b/src/components/Todos/components/TodoItem/TodoItem.css
@@ -1,5 +1,6 @@
 .todo-item {
   display: flex;
+  align-items: center;
   gap: 1rem;
   /* border: 1px solid var(--border-color); */
   border-radius: 0.2rem;
